...
    extra = {
        onlySuggested?.let {
            IconChoiceChip(
                PhosphorIcons.LinkSimple,
                strings().suggestedLinks,
                it,
                "only-suggested",
                onToggleSuggested,
            )
        }
    },
) {
    "sort-${it.name.lowercase()}"
...
